<resources>
    <string name="app_name">开眼</string>

    <string name="tab_one">首页</string>
    <string name="tab_two">发现</string>
    <string name="tab_three">通知</string>
    <string name="tab_four">我的</string>
    <string name="isLoaading">正在努力加载中...</string>
    <string name="more_syspetizer_video">更多开眼编辑精选</string>
    <string name="download">缓存</string>
    <string name="recommendation">相关推荐</string>
    <string name="notification">Notification</string>
    <string name="dont_miss_important_msg">别错过重要的信息</string>
    <string name="the_function_after_login">登录后即可查看评论回复、点赞及关注等通知信息</string>
    <string name="login_in">登录</string>
    <string name="comment_and_collect_after_login">点击登录即可发表评论及同步已收藏视频</string>
    <string name="collect">收藏</string>
    <string name="comment">评论</string>
    <string name="heart">喜欢</string>
    <string name="version_info">Version 3.14.254</string>
    <string name="cancel">取消</string>
    <string name="input_keyword_to_found_more_video">输入标题或描述中的关键词找到更多视频</string>
    <string name="the_hottest_keyword">- 热门搜索词 -</string>
    <string name="help_to_found_video">帮你找到感兴趣的视频</string>
    <string name="the_search_result">- 「搜索词」搜索结果共 Count 个 -</string>
    <string name="my_message">我的消息</string>
    <string name="my_attention">我的关注</string>
    <string name="my_cache">我的缓存</string>
    <string name="watch_record">观看记录</string>
    <string name="feedback">意见反馈</string>
    <string name="contribute">我要投稿</string>
    <string name="more_operate">更多操作</string>
    <string name="no_interesting">不感兴趣</string>
    <string name="shield_the_author">屏蔽该作者</string>
    <string name="cache_video">缓存视频</string>
    <string name="discovery">Discovery</string>
    <string name="hot">热门</string>
    <string name="attention">关注</string>
    <string name="classify">分类</string>
    <string name="setting">设置</string>
    <string name="remind_me_by_use_flux">- 使用流量时提醒我 -</string>
    <string name="remind_me_about_update">- 日报更新提醒 -</string>
    <string name="auto_play_in_wifi">- Wi-Fi下自动播放 -</string>
    <string name="translation">- 翻译 -</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="clean_all_cache">清除所有缓存</string>
    <string name="choice_cache_path">选择缓存路径</string>
    <string name="check_version_upgrade">检查版本更新</string>
    <string name="user_protocol">用户协议</string>
    <string name="video_function_declaration">视频功能声明</string>
    <string name="the_copyright_to_report">版权举报</string>
    <string name="you_contribution_is_highly_appreciated">- Your contribution is highly appreciated! -</string>
    <string name="open_to_open">让每一个人都开眼，开了又开。</string>
    <string name="all_category">全部分类</string>
    <string name="all_rank">全部排行</string>
    <string name="all_topic">全部专题</string>
    <string name="eyepetizer">Eyepetizer</string>
    <string name="weekRank">周排行</string>
    <string name="monthRank">月排行</string>
    <string name="totalRank">总排行</string>
</resources>
