<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:gravity="center"
        android:padding="@dimen/dimen_20"
        android:text="@string/more_operate"
        android:textColor="@color/secondTextBlack"
        android:textSize="@dimen/title_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/dividerBlack" />

    <TextView
        android:id="@+id/txtView_noInteresting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dimen_20"
        android:text="@string/no_interesting"
        android:textColor="@color/commonTextBlack"
        android:textSize="@dimen/large_title_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/dividerBlack" />

    <TextView
        android:id="@+id/txtView_shieldAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dimen_20"
        android:text="@string/shield_the_author"
        android:textColor="@color/commonTextBlack"
        android:textSize="@dimen/large_title_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/dividerBlack" />

    <TextView
        android:id="@+id/txtView_cacheVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dimen_20"
        android:text="@string/cache_video"
        android:textColor="@color/commonTextBlack"
        android:textSize="@dimen/large_title_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/dividerBlack" />

    <TextView
        android:id="@+id/txtView_cancelMoreOperate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dimen_20"
        android:text="@string/cancel"
        android:textColor="@color/commonTextBlack"
        android:textSize="@dimen/title_size"
        android:textStyle="bold" />

</LinearLayout>