<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.rockin.view.person.SettingActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_44">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/setting"
                android:textColor="@color/commonTextBlack"
                android:textSize="@dimen/large_title_size" />

            <ImageView
                android:layout_width="@dimen/dimen_44"
                android:layout_height="match_parent"
                android:padding="@dimen/dimen_12"
                android:src="@drawable/icon_arrows_left_black"
                app:clickCommand="@{viewModel.onBackCommand}" />

        </FrameLayout>

        <include layout="@layout/horizontal_line" />

        <com.rockin.widget.CustomScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8"
                    android:layout_marginTop="@dimen/dimen_56"
                    android:gravity="center"
                    android:text="@string/remind_me_by_use_flux"
                    android:textColor="@color/commonTextBlack"
                    android:textSize="@dimen/common_size" />

                <include
                    android:id="@+id/include_switchRemind"
                    layout="@layout/layout_switch_setting" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8"
                    android:layout_marginTop="@dimen/dimen_48"
                    android:gravity="center"
                    android:text="@string/remind_me_about_update"
                    android:textColor="@color/commonTextBlack"
                    android:textSize="@dimen/common_size" />

                <include
                    android:id="@+id/include_switchUpdate"
                    layout="@layout/layout_switch_setting" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8"
                    android:layout_marginTop="@dimen/dimen_48"
                    android:gravity="center"
                    android:text="@string/auto_play_in_wifi"
                    android:textColor="@color/commonTextBlack"
                    android:textSize="@dimen/common_size" />

                <include
                    android:id="@+id/include_switchAutoPlay"
                    layout="@layout/layout_switch_setting" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8"
                    android:layout_marginTop="@dimen/dimen_48"
                    android:gravity="center"
                    android:text="@string/translation"
                    android:textColor="@color/commonTextBlack"
                    android:textSize="@dimen/common_size" />

                <include
                    android:id="@+id/include_switchTranslation"
                    layout="@layout/layout_switch_setting" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8"
                    android:layout_marginTop="@dimen/dimen_48"
                    android:gravity="center"
                    android:text="@string/clean_all_cache"
                    android:textColor="@color/commonTextBlack"
                    android:textSize="@dimen/large_title_size"
                    app:clickCommand="@{viewModel.onCleanCacheCommand}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8"
                    android:layout_marginTop="@dimen/dimen_48"
                    android:gravity="center"
                    android:text="@string/choice_cache_path"
                    android:textColor="@color/commonTextBlack"
                    android:textSize="@dimen/large_title_size"
                    app:clickCommand="@{viewModel.onChoiceCachePathCommand}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8"
                    android:layout_marginTop="@dimen/dimen_48"
                    android:gravity="center"
                    android:text="@string/check_version_upgrade"
                    android:textColor="@color/commonTextBlack"
                    android:textSize="@dimen/large_title_size"
                    app:clickCommand="@{viewModel.onCheckVersionCommand}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8"
                    android:layout_marginTop="@dimen/dimen_48"
                    android:gravity="center"
                    android:text="@string/user_protocol"
                    android:textColor="@color/commonTextBlack"
                    android:textSize="@dimen/large_title_size"
                    app:clickCommand="@{viewModel.onUserProtocolCommand}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8"
                    android:layout_marginTop="@dimen/dimen_48"
                    android:gravity="center"
                    android:text="@string/video_function_declaration"
                    android:textColor="@color/commonTextBlack"
                    android:textSize="@dimen/large_title_size"
                    app:clickCommand="@{viewModel.onFuncDeclarationCommand}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8"
                    android:layout_marginTop="@dimen/dimen_48"
                    android:gravity="center"
                    android:text="@string/the_copyright_to_report"
                    android:textColor="@color/commonTextBlack"
                    android:textSize="@dimen/large_title_size"
                    app:clickCommand="@{viewModel.onCopyrightCommand}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8"
                    android:layout_marginTop="@dimen/dimen_48"
                    android:gravity="center"
                    android:text="@string/you_contribution_is_highly_appreciated"
                    android:textColor="@color/commonTextBlack"
                    android:textSize="@dimen/small_size"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/dimen_96"
                    android:gravity="center"
                    android:text="@string/open_to_open"
                    android:textColor="@color/commonTextBlack"
                    android:textSize="@dimen/common_size" />

            </LinearLayout>

        </com.rockin.widget.CustomScrollView>

    </LinearLayout>

</layout>