<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.rockin.view.person.PersonFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_44">

            <ImageView
                android:id="@+id/imgView_setting"
                android:layout_width="@dimen/dimen_44"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:padding="@dimen/dimen_12"
                android:src="@drawable/icon_setting" />

        </FrameLayout>


        <ImageView
            android:layout_width="@dimen/dimen_72"
            android:layout_height="@dimen/dimen_72"
            android:layout_margin="@dimen/dimen_12"
            android:background="@drawable/shape_grey_bg_radius_36"
            android:padding="@dimen/dimen_16"
            android:src="@drawable/icon_eye_grey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_8"
            android:maxLines="1"
            android:text="@string/comment_and_collect_after_login"
            android:textColor="@color/secondTextBlack"
            android:textSize="@dimen/title_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_20">

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dimen_8"
                    android:src="@drawable/icon_heart_grey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/heart"
                    android:textColor="@color/secondTextBlack"
                    android:textSize="@dimen/title_size" />

            </LinearLayout>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/backgroundColor" />

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dimen_8"
                    android:src="@drawable/icon_msg_grey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comment"
                    android:textColor="@color/secondTextBlack"
                    android:textSize="@dimen/title_size" />

            </LinearLayout>

        </LinearLayout>

        <include layout="@layout/horizontal_line" />

        <com.rockin.widget.CustomScrollView
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1">


        </com.rockin.widget.CustomScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/dimen_16"
            android:paddingTop="@dimen/dimen_2"
            android:text="@string/version_info"
            android:textColor="@color/hintTextBlack"
            android:textSize="@dimen/small_size" />

    </LinearLayout>
</layout>